fix projects issues

--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
       </div>
     </section>
     <section
-      class="ftco-section ftco-hireme img margin-top"
+      class="ftco-section ftco-hireme img margin-top mt-5" 
       style="background-image: url(images/bg_1.jpg)"
     >
       <div class="container">
