--- a/index.html
+++ b/index.html
@@ -103,9 +103,10 @@
               >
                 <div class="text">
                   <span class="subheading">Hello!</span>
-                  <h1 class="mb-4 mt-3">I'm <span>Chaima IZOUARHN</span></h1>
-                  <h2 class="mb-4">A Computer Science Student</h2>
-                  <p>
+                  <h1 class="mb-2 mt-3">I'm <span>Chaima IZOUARHN</span></h1>
+                  <h2 class="">A Computer Science Student</h2>
+                  <p style="color: white;" class="mb-4 ">I'am seeking an internship opportunity for my <span style="color: #FFBD39; font-weight: 800;">PFE</span> </p>
+                  
 					<a href="ENG-CHAIMA IZOUARHN-CV.pdf" class="btn btn-primary  py-3 px-4" download="">CV</a>
                     <a
                       href="#projects-section"
