--- a/mototaxi.html
+++ b/mototaxi.html
@@ -289,7 +289,7 @@
           fill="none"
           stroke-width="4"
           stroke-miterlimit="10"
-          stroke="#F96D00"
+          stroke="#FFBD39"
         />
       </svg>
     </div>
